--- a/Source code/backend/pom.xml
+++ b/Source code/backend/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+		    <groupId>net.sourceforge.tess4j</groupId>
+		    <artifactId>tess4j</artifactId>
+		    <version>5.10.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
