--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ config/
 ../config.py
 config.py
 .env
+.env.example
 ./../archive/
 # Ignore archive folders that store processed images
 archive/
 **/archive/
+
+README.md
+README_SIMPLE.md
